--- a/src/stu/tpp/musicshop/view/root_layout.fxml
+++ b/src/stu/tpp/musicshop/view/root_layout.fxml
@@ -5,21 +5,17 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stu.tpp.musicshop.controller.RootLayoutController">
+<BorderPane prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stu.tpp.musicshop.controller.RootLayoutController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <Menu mnemonicParsing="false" text="File">
-                <MenuItem mnemonicParsing="false" onAction="#onGroupView"
-                          text="Show groups page"/>
-                <MenuItem mnemonicParsing="false" onAction="#onDiskView"
-                          text="Show disks page"/>
-                <MenuItem mnemonicParsing="false" onAction="#onCompositionView"
-                          text="Show compositions page"/>
-                <MenuItem mnemonicParsing="false" onAction="#onExit" text="Exit"/>
+                <MenuItem mnemonicParsing="false" onAction="#onGroupView" style="-fx-graphic: url(&quot;stu/tpp/musicshop/images/ic_group_black_18dp_1x.png&quot;);" text="Groups page" />
+                <MenuItem mnemonicParsing="false" onAction="#onDiskView" style="-fx-graphic: url(&quot;stu/tpp/musicshop/images/ic_album_black_18dp_1x.png&quot;);" text="Disks page" />
+                <MenuItem mnemonicParsing="false" onAction="#onCompositionView" style="-fx-graphic: url(&quot;stu/tpp/musicshop/images/ic_music_note_black_18dp_1x.png&quot;);" text="Compositions page" />
+                <MenuItem mnemonicParsing="false" onAction="#onExit" text="Exit" />
             </Menu>
             <Menu mnemonicParsing="false" text="Help">
-                <MenuItem mnemonicParsing="false" onAction="#onAbout" text="About"/>
+                <MenuItem mnemonicParsing="false" onAction="#onAbout" text="About" />
             </Menu>
         </MenuBar>
     </top>
