--- a/src/stu/tpp/musicshop/view/composition_view.fxml
+++ b/src/stu/tpp/musicshop/view/composition_view.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stu.tpp.musicshop.controller.CompositionViewController">
+<AnchorPane prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stu.tpp.musicshop.controller.CompositionViewController">
     <SplitPane dividerPositions="0.4" layoutY="14.0" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <GridPane>
             <columnConstraints>
@@ -70,7 +70,7 @@
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin>
             </TextField>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onAddComposition" text="Add composition" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#add" text="Add composition" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                 <GridPane.margin>
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin>
@@ -94,6 +94,7 @@
                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -129,7 +130,7 @@
                 <GridPane.margin>
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin></TextField>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSelectComposition" text="Search" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#selectSingle" text="Search" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                 <GridPane.margin>
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin>
@@ -139,18 +140,19 @@
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin>
             </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSelectAllCompositions" text="All" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+         <Button layoutX="172.0" layoutY="72.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#delete" text="Delete" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#selectAll" text="All" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                 <GridPane.margin>
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin>
             </Button>
-            <TableView fx:id="compositionTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="3">
+            <TableView fx:id="compositionTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="3">
                 <columns>
-                    <TableColumn fx:id="compositionIdColumn" maxWidth="1.7976931348623157E308" prefWidth="57.0" text="CompositionID" />
-                    <TableColumn fx:id="diskIdColumn" maxWidth="1.7976931348623157E308" prefWidth="68.0" text="DiskID" />
-                    <TableColumn fx:id="nameColumn" maxWidth="1.7976931348623157E308" prefWidth="118.0" text="Name" />
-                    <TableColumn fx:id="presentDateColumn" maxWidth="1.7976931348623157E308" prefWidth="118.0" text="Present date" />
-                    <TableColumn fx:id="durationColumn" maxWidth="1.7976931348623157E308" prefWidth="67.0" text="Duration" />
+                    <TableColumn fx:id="compositionIdColumn" maxWidth="1.7976931348623157E308" prefWidth="105.0" text="CompositionID" />
+                    <TableColumn fx:id="diskIdColumn" maxWidth="1.7976931348623157E308" prefWidth="71.0" text="DiskID" />
+                    <TableColumn fx:id="nameColumn" maxWidth="1.7976931348623157E308" prefWidth="97.0" text="Name" />
+                    <TableColumn fx:id="presentDateColumn" maxWidth="1.7976931348623157E308" prefWidth="115.0" text="Present date" />
+                    <TableColumn fx:id="durationColumn" maxWidth="1.7976931348623157E308" prefWidth="85.0" text="Duration" />
                 </columns>
             </TableView>
         </GridPane>
