--- a/src/stu/tpp/musicshop/view/disk_view.fxml
+++ b/src/stu/tpp/musicshop/view/disk_view.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stu.tpp.musicshop.controller.DiskViewController">
+<AnchorPane prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stu.tpp.musicshop.controller.DiskViewController">
     <SplitPane dividerPositions="0.4" layoutY="14.0" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <GridPane>
             <columnConstraints>
@@ -81,7 +81,7 @@
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin>
             </TextField>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onAddDisk" text="Add disk" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#add" text="Add disk" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5" GridPane.valignment="CENTER">
                 <GridPane.margin>
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin>
@@ -105,6 +105,7 @@
                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -122,7 +123,7 @@
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin>
             </Label>
-            <Label layoutX="101.0" layoutY="17.0" maxWidth="1.7976931348623157E308" text="New price" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+            <Label layoutX="101.0" layoutY="17.0" maxWidth="1.7976931348623157E308" text="New price" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER">
                 <GridPane.margin>
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin></Label>
@@ -140,7 +141,7 @@
                 <GridPane.margin>
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin></TextField>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSelectDisk" text="Search" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#selectSingle" text="Search" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                 <GridPane.margin>
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin>
@@ -150,12 +151,13 @@
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin>
             </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSelectAllDisks" text="All" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+         <Button layoutX="195.0" layoutY="72.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#delete" text="Delete" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#selectAll" text="All" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                 <GridPane.margin>
                     <Insets left="4.0" right="4.0" />
                 </GridPane.margin>
             </Button>
-            <TableView fx:id="diskTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="3">
+            <TableView fx:id="diskTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="3">
                 <columns>
                     <TableColumn fx:id="diskIdColumn" maxWidth="1.7976931348623157E308" prefWidth="57.0" text="DiskID" />
                     <TableColumn fx:id="groupIdColumn" maxWidth="1.7976931348623157E308" prefWidth="68.0" text="GroupID" />
