--- a/src/stu/tpp/musicshop/view/group_view.fxml
+++ b/src/stu/tpp/musicshop/view/group_view.fxml
@@ -14,171 +14,129 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="stu.tpp.musicshop.controller.GroupViewController">
-   <SplitPane dividerPositions="0.4" layoutY="14.0" prefHeight="160.0" prefWidth="200.0"
-              AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-              AnchorPane.topAnchor="0.0">
+<AnchorPane prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="stu.tpp.musicshop.controller.GroupViewController">
+   <SplitPane dividerPositions="0.4" layoutY="14.0" prefHeight="160.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <GridPane>
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0"
-                            vgrow="SOMETIMES"/>
-            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0"
-                            vgrow="SOMETIMES"/>
-            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0"
-                            vgrow="SOMETIMES"/>
-            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0"
-                            vgrow="SOMETIMES"/>
-            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="50.0"
-                            vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
-         <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Name"
-                GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
+         <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Name" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </Label>
-         <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Musician"
-                GridPane.halignment="RIGHT" GridPane.rowIndex="1"
-                GridPane.valignment="CENTER">
+         <Label alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" text="Musician" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </Label>
-         <Label alignment="CENTER_RIGHT" layoutX="10.0" layoutY="47.0"
-                maxWidth="1.7976931348623157E308" text="Style" GridPane.halignment="RIGHT"
-                GridPane.rowIndex="2" GridPane.valignment="CENTER">
+         <Label alignment="CENTER_RIGHT" layoutX="10.0" layoutY="47.0" maxWidth="1.7976931348623157E308" text="Style" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="CENTER">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </Label>
-         <TextField fx:id="nameField" maxWidth="1.7976931348623157E308"
-                    promptText="Group name" GridPane.columnIndex="1">
+         <TextField fx:id="nameField" maxWidth="1.7976931348623157E308" promptText="Group name" GridPane.columnIndex="1">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </TextField>
-         <TextField fx:id="musicianField" maxWidth="1.7976931348623157E308" promptText="Lead"
-                    GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <TextField fx:id="musicianField" maxWidth="1.7976931348623157E308" promptText="Lead" GridPane.columnIndex="1" GridPane.rowIndex="1">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </TextField>
-         <TextField fx:id="styleField" maxWidth="1.7976931348623157E308"
-                    promptText="Group style" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <TextField fx:id="styleField" maxWidth="1.7976931348623157E308" promptText="Group style" GridPane.columnIndex="1" GridPane.rowIndex="2">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </TextField>
-         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false"
-                 onAction="#onAddGroup" text="Add group" GridPane.columnSpan="2"
-                 GridPane.halignment="RIGHT" GridPane.rowIndex="3"
-                 GridPane.valignment="CENTER">
+         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#add" text="Add group" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </Button>
-         <Label maxWidth="1.7976931348623157E308" text="Result console"
-                GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="4"
-                GridPane.valignment="BOTTOM">
+         <Label maxWidth="1.7976931348623157E308" text="Result console" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="BOTTOM">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
             <font>
-               <Font name="System Bold" size="13.0"/>
+               <Font name="System Bold" size="13.0" />
             </font>
          </Label>
-         <TextArea fx:id="resultArea" prefHeight="200.0" prefWidth="200.0"
-                   GridPane.columnSpan="2" GridPane.rowIndex="5">
+         <TextArea fx:id="resultArea" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="5">
             <GridPane.margin>
-               <Insets bottom="4.0" left="4.0" right="4.0" top="4.0"/>
+               <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
             </GridPane.margin>
          </TextArea>
       </GridPane>
       <GridPane>
          <columnConstraints>
-            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
-            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+            <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0"
-                            vgrow="SOMETIMES"/>
-            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0"
-                            vgrow="SOMETIMES"/>
-            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0"
-                            vgrow="SOMETIMES"/>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
-         <Label maxWidth="1.7976931348623157E308" text="Group ID" GridPane.columnSpan="2"
-                GridPane.halignment="CENTER">
+         <Label maxWidth="1.7976931348623157E308" text="Group ID" GridPane.columnSpan="2" GridPane.halignment="CENTER">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </Label>
-         <Label maxWidth="1.7976931348623157E308" text="New musician" GridPane.columnIndex="2"
-                GridPane.columnSpan="2" GridPane.halignment="CENTER">
+         <Label maxWidth="1.7976931348623157E308" text="New musician" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </Label>
-         <TextField fx:id="groupIdField" GridPane.columnSpan="2" GridPane.halignment="CENTER"
-                    GridPane.rowIndex="1">
+         <TextField fx:id="groupIdField" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </TextField>
-         <TextField fx:id="newMusicianField" GridPane.columnIndex="2" GridPane.columnSpan="2"
-                    GridPane.halignment="CENTER" GridPane.rowIndex="1">
+         <TextField fx:id="newMusicianField" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </TextField>
-         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Search"
-                 onAction="#onSelectGroup" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#selectSingle" text="Search" GridPane.halignment="CENTER" GridPane.rowIndex="2">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </Button>
-         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Update"
-                 onAction="#onChangeMusician" GridPane.columnIndex="1"
-                 GridPane.halignment="CENTER" GridPane.rowIndex="2">
+         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onChangeMusician" text="Update" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </Button>
-         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Delete"
-                 onAction="#onDelete" GridPane.columnIndex="2" GridPane.halignment="CENTER"
-                 GridPane.rowIndex="2">
+         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#delete" text="Delete" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </Button>
-         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="All"
-                 onAction="#onSelectAllGroups" GridPane.columnIndex="3"
-                 GridPane.halignment="CENTER" GridPane.rowIndex="2">
+         <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#selectAll" text="All" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2">
             <GridPane.margin>
-               <Insets left="4.0" right="4.0"/>
+               <Insets left="4.0" right="4.0" />
             </GridPane.margin>
          </Button>
-         <TableView fx:id="groupTable" prefHeight="200.0" prefWidth="200.0"
-                    GridPane.columnSpan="4" GridPane.rowIndex="3">
+         <TableView fx:id="groupTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="4" GridPane.rowIndex="3">
             <columns>
-               <TableColumn fx:id="groupIdColumn" maxWidth="1.7976931348623157E308"
-                            prefWidth="90.0" text="GroupID"/>
-               <TableColumn fx:id="nameColumn" maxWidth="1.7976931348623157E308"
-                            prefWidth="90.0" text="Name"/>
-               <TableColumn fx:id="musicianColumn" maxWidth="1.7976931348623157E308"
-                            prefWidth="90.0" text="Musician"/>
-               <TableColumn fx:id="styleColumn" maxWidth="1.7976931348623157E308"
-                            prefWidth="85.0" text="Style"/>
+               <TableColumn fx:id="groupIdColumn" maxWidth="1.7976931348623157E308" prefWidth="90.0" text="GroupID" />
+               <TableColumn fx:id="nameColumn" maxWidth="1.7976931348623157E308" prefWidth="90.0" text="Name" />
+               <TableColumn fx:id="musicianColumn" maxWidth="1.7976931348623157E308" prefWidth="90.0" text="Musician" />
+               <TableColumn fx:id="styleColumn" maxWidth="1.7976931348623157E308" prefWidth="85.0" text="Style" />
             </columns>
          </TableView>
       </GridPane>
