--- a/music-shop-web/src/app/app-bar/app-bar.component.html
+++ b/music-shop-web/src/app/app-bar/app-bar.component.html
@@ -1,26 +1,22 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="mat-elevation-z4">
 	<span>{{currentPageName}}</span>
 	<span class="toolbar-spacer"></span>
-    <button *ngIf="isLoggedIn"
-    mat-icon-button [matMenuTriggerFor]="accountMenu">
+    <button *ngIf="isLoggedIn" mat-icon-button [matMenuTriggerFor]="accountMenu">
         <mat-icon>account_circle</mat-icon>
     </button>
-    <button *ngIf="!isLoggedIn"
-	class="toolbar-button"
-    type="button"
-    mat-stroked-button color="accent"
-    (click)="onSignIn()">
-        Sign In
+    <button *ngIf="!isLoggedIn" class="toolbar-button" type="button"
+    mat-stroked-button color="accent" (click)="onSignIn()">
+        Sign in
     </button>
-    <button *ngIf="!isLoggedIn"
-    class="toolbar-button" 
-    type="button" mat-stroked-button>
-        Sign Up
+    <button *ngIf="!isLoggedIn" class="toolbar-button" type="button"
+    mat-stroked-button (click)="onSignUp()">
+        Sign up
     </button>
 </mat-toolbar>
 
 <mat-menu #accountMenu="matMenu">
-    <p class="menu-item">Signed in as <b>email</b></p>
+    <p class="menu-item">Signed in as <b>Name</b></p>
+    <button mat-menu-item (click)="onMyLibrary()">My library</button>
     <mat-divider></mat-divider>
-    <button mat-menu-item (click)="onSignOut()">Sign Out</button>
+    <button mat-menu-item (click)="onSignOut()">Sign out</button>
 </mat-menu>
