--- a/music-shop-web/src/app/main/main.component.html
+++ b/music-shop-web/src/app/main/main.component.html
@@ -1,15 +1,15 @@
 <!-- Main component its a container for other components in tab layout -->
 <mat-tab-group color="accent" backgroundColor="primary">
-	<mat-tab label="Groups">
-		<!-- There will be all groups list -->
-		<p>Groups</p>
-	</mat-tab>
-	<mat-tab label="Albums">
-		<!-- There will be all albums list -->
-		<p>Albums</p>
-	</mat-tab>
-	<mat-tab label="Compositions">
-		<!-- There will be all compositions list-->
-		<p>Compositions</p>
-	</mat-tab>
+    <mat-tab label="Groups">
+        <!-- There will be all groups list -->
+        <app-group-list></app-group-list>
+    </mat-tab>
+    <mat-tab label="Albums">
+        <!-- There will be all albums list -->
+        <app-album-list show="all"></app-album-list>
+    </mat-tab>
+    <mat-tab label="Compositions">
+        <!-- There will be all compositions list-->
+        <app-compositions-list show="all"></app-compositions-list>
+    </mat-tab>
 </mat-tab-group>
