Add users library

--- a/music-shop-web/src/app/album-details/album-details.component.html
+++ b/music-shop-web/src/app/album-details/album-details.component.html
@@ -10,6 +10,8 @@
         <span>
             <mat-icon>attach_money</mat-icon>
         </span>
+
+        <button *ngIf="!alreadyPurchased" mat-stroked-button (click)="onBuy()">Buy</button>
     </p>
 </div>
 <app-compositions-list albumId="{{albumId}}"></app-compositions-list>
