Add admin pages

--- a/music-shop-web/src/app/page-not-found/page-not-found.component.html
+++ b/music-shop-web/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,6 @@
+<img
+  src="https://lh3.googleusercontent.com/proxy/QvU2kLrAPpP2-2ivYoRlVZRu-RqIijU_R04ME0MNDx2By-QtZAkW8fme2Ou0g0-Gi0_QY8qhJoqlFSyMUsqLcpMK8HHHBGbLLCg"
+  alt="Пошел отсюда">
 <p align="center" style="margin-top: 16px">
   This is not the page you are looking for!!!
 </p>
