--- a/music-shop-admin/src/app/album-list/album-list.component.html
+++ b/music-shop-admin/src/app/album-list/album-list.component.html
@@ -1,3 +1,37 @@
+<form (ngSubmit)="onSubmit()" [formGroup]="form">
+  <div class="fields-container">
+    <mat-form-field>
+      <input #amount matInput type="number" placeholder="Amount"
+        [formControl]="amountFormControl">
+    </mat-form-field>
+    <mat-form-field>
+      <input #name matInput type="text" placeholder="Name"
+        [formControl]="nameFormControl">
+    </mat-form-field>
+    <mat-form-field>
+      <input #image matInput type="text" placeholder="Image"
+        [formControl]="imageFormControl">
+    </mat-form-field>
+    <mat-form-field>
+      <input #presentDate matInput type="text" placeholder="Present Date"
+        [formControl]="presentDateFormControl">
+    </mat-form-field>
+    <mat-form-field>
+      <input #price matInput type="text" placeholder="Price"
+        [formControl]="priceFormControl">
+    </mat-form-field>
+    <mat-form-field>
+      <input #groupId matInput type="text" placeholder="GroupID"
+        [formControl]="groupIdFormControl">
+    </mat-form-field>
+  </div>
+
+  <div class="buttons-container">
+    <button mat-stroked-button color="primary"
+      [disabled]="form.invalid">Create</button>
+  </div>
+</form>
+
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
   <!-- Id Column -->
@@ -16,6 +50,12 @@
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
     <td mat-cell *matCellDef="let disk"> {{disk.name}} </td>
+  </ng-container>
+
+  <!-- Image Column -->
+  <ng-container matColumnDef="image">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Image </th>
+    <td mat-cell *matCellDef="let disk"> {{disk.image}} </td>
   </ng-container>
 
   <!-- PresentDate Column -->
