--- a/music-shop-web/src/app/album-list/album-list.component.html
+++ b/music-shop-web/src/app/album-list/album-list.component.html
@@ -6,7 +6,7 @@
 <div class="albums-container">
     <mat-card *ngFor="let album of albumList">
         <mat-card-header>
-            <img mat-card-avatar src="assets/outline-album-24px.svg">
+            <img mat-card-avatar src="{{album.image}}">
             <mat-card-title>{{album.name}}</mat-card-title>
             <mat-card-subtitle>{{album.presentDate}}</mat-card-subtitle>
         </mat-card-header>
